--- a/doc/latex/class_training_1_1_training.tex
+++ b/doc/latex/class_training_1_1_training.tex
@@ -3,8 +3,7 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}\label{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}} 
-def {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self)
+def \mbox{\hyperlink{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}{\+\_\+\+\_\+init\+\_\+\+\_\+}} (self)
 \item 
 def \mbox{\hyperlink{class_training_1_1_training_a910d50cee577997808b934c6ef0d5a31}{load\+\_\+training\+\_\+image\+\_\+properties}} (self)
 \item 
@@ -14,14 +13,10 @@ def \mbox{\hyperlink{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d
 \item 
 def \mbox{\hyperlink{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}{train\+\_\+system}} (self)
 \item 
-\mbox{\Hypertarget{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}\label{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}} 
-def {\bfseries show} (self, image, x1=0, y1=0, x2=0, y2=0)
+def \mbox{\hyperlink{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}{show}} (self, image, x1=0, y1=0, x2=0, y2=0)
 \end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
-\item 
-\mbox{\Hypertarget{class_training_1_1_training_adc1bd39b2a8a99c55232e472407f09e2}\label{class_training_1_1_training_adc1bd39b2a8a99c55232e472407f09e2}} 
-{\bfseries project\+\_\+root}
 \item 
 \mbox{\Hypertarget{class_training_1_1_training_a2b03b592f1b0db8a9990845bbeb47962}\label{class_training_1_1_training_a2b03b592f1b0db8a9990845bbeb47962}} 
 {\bfseries training\+\_\+path}
@@ -36,6 +31,17 @@ def {\bfseries show} (self, image, x1=0, y1=0, x2=0, y2=0)
 
 \subsection{Detailed Description}
 \begin{DoxyVerb}Training class
+\end{DoxyVerb}
+ 
+
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}\label{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}}
+\index{\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{\+\_\+\+\_\+init\+\_\+\+\_\+()}{\_\_init\_\_()}}
+{\footnotesize\ttfamily def Training.\+Training.\+\_\+\+\_\+init\+\_\+\+\_\+ (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Initialising
 \end{DoxyVerb}
  
 
@@ -66,6 +72,19 @@ def {\bfseries show} (self, image, x1=0, y1=0, x2=0, y2=0)
 {\footnotesize\ttfamily def Training.\+Training.\+load\+\_\+training\+\_\+image\+\_\+properties (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
 
 \begin{DoxyVerb}Loads training images properties
+:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}\label{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!show@{show}}
+\index{show@{show}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{show()}{show()}}
+{\footnotesize\ttfamily def Training.\+Training.\+show (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{image,  }\item[{}]{x1 = {\ttfamily 0},  }\item[{}]{y1 = {\ttfamily 0},  }\item[{}]{x2 = {\ttfamily 0},  }\item[{}]{y2 = {\ttfamily 0} }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}:param image:
+:param x1:
+:param y1:
+:param x2:
+:param y2:
 :return:
 \end{DoxyVerb}
  \mbox{\Hypertarget{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}\label{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}} 
