--- a/doc/latex/namespace_main.tex
+++ b/doc/latex/namespace_main.tex
@@ -16,6 +16,10 @@ class \mbox{\hyperlink{class_main_1_1_main}{Main}}
 \subsection{Detailed Description}
 \begin{DoxyVerb}This project trains an AI to detect german traffic signs and sends the recognized signs to ros
 
+TODO:
+- interpolate ROI from CSV to new dimensions
+- integrate ROS platform
+
 Authors:        Jan Füsting
 Last edited:    10.09.2018
 \end{DoxyVerb}
