--- a/doc/latex/class_misc_1_1_misc.tex
+++ b/doc/latex/class_misc_1_1_misc.tex
@@ -3,12 +3,17 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_misc_1_1_misc_a2361f15b11e4875dff86f4bedf58dc31}\label{class_misc_1_1_misc_a2361f15b11e4875dff86f4bedf58dc31}} 
-def {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self)
+def \mbox{\hyperlink{class_misc_1_1_misc_a2361f15b11e4875dff86f4bedf58dc31}{\+\_\+\+\_\+init\+\_\+\+\_\+}} (self)
 \item 
-def \mbox{\hyperlink{class_misc_1_1_misc_af3f58245bac7eefdc5a266a06bd1cb85}{download\+\_\+files}} (self, images=True, haar=False)
+def \mbox{\hyperlink{class_misc_1_1_misc_a911cb2d9726dcdbf6ef25607522cedc0}{download\+\_\+pos\+\_\+files}} (self, images=True, haar=False)
 \item 
-def \mbox{\hyperlink{class_misc_1_1_misc_aaeb87b754b9e7b39fcf5c39e6b34a1ae}{manipulate\+\_\+image}} (self)
+def \mbox{\hyperlink{class_misc_1_1_misc_aea6e1bbdef723dfbe94899cd18399b93}{download\+\_\+neg\+\_\+files}} (self)
+\item 
+def \mbox{\hyperlink{class_misc_1_1_misc_a04c3efa3e287f2aba4cefbb2c11d0098}{download\+\_\+face\+\_\+recognition\+\_\+haar}} (self)
+\item 
+def \mbox{\hyperlink{class_misc_1_1_misc_aebc81e32ad0507ccbccd8173d9a0ff50}{manipulate\+\_\+image}} (self, positive=False)
+\item 
+def \mbox{\hyperlink{class_misc_1_1_misc_a850d818bacc25df0ecc2ae05b9b15f89}{generate\+\_\+description}} (self)
 \end{DoxyCompactItemize}
 \subsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
@@ -34,12 +39,46 @@ def \mbox{\hyperlink{class_misc_1_1_misc_a8d30d14e25c28f7f8ac3798e501d4aaa}{fold
 \end{DoxyCompactItemize}
 
 
+\subsection{Detailed Description}
+\begin{DoxyVerb}This class contains functions which are used independent of it's context
+\end{DoxyVerb}
+ 
+
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{class_misc_1_1_misc_a2361f15b11e4875dff86f4bedf58dc31}\label{class_misc_1_1_misc_a2361f15b11e4875dff86f4bedf58dc31}} 
+\index{Misc\+::\+Misc@{Misc\+::\+Misc}!\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}}
+\index{\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}!Misc\+::\+Misc@{Misc\+::\+Misc}}
+\subsubsection{\texorpdfstring{\+\_\+\+\_\+init\+\_\+\+\_\+()}{\_\_init\_\_()}}
+{\footnotesize\ttfamily def Misc.\+Misc.\+\_\+\+\_\+init\+\_\+\+\_\+ (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Initialising
+\end{DoxyVerb}
+ 
+
 \subsection{Member Function Documentation}
-\mbox{\Hypertarget{class_misc_1_1_misc_af3f58245bac7eefdc5a266a06bd1cb85}\label{class_misc_1_1_misc_af3f58245bac7eefdc5a266a06bd1cb85}} 
-\index{Misc\+::\+Misc@{Misc\+::\+Misc}!download\+\_\+files@{download\+\_\+files}}
-\index{download\+\_\+files@{download\+\_\+files}!Misc\+::\+Misc@{Misc\+::\+Misc}}
-\subsubsection{\texorpdfstring{download\+\_\+files()}{download\_files()}}
-{\footnotesize\ttfamily def Misc.\+Misc.\+download\+\_\+files (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{images = {\ttfamily True},  }\item[{}]{haar = {\ttfamily False} }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{class_misc_1_1_misc_a04c3efa3e287f2aba4cefbb2c11d0098}\label{class_misc_1_1_misc_a04c3efa3e287f2aba4cefbb2c11d0098}} 
+\index{Misc\+::\+Misc@{Misc\+::\+Misc}!download\+\_\+face\+\_\+recognition\+\_\+haar@{download\+\_\+face\+\_\+recognition\+\_\+haar}}
+\index{download\+\_\+face\+\_\+recognition\+\_\+haar@{download\+\_\+face\+\_\+recognition\+\_\+haar}!Misc\+::\+Misc@{Misc\+::\+Misc}}
+\subsubsection{\texorpdfstring{download\+\_\+face\+\_\+recognition\+\_\+haar()}{download\_face\_recognition\_haar()}}
+{\footnotesize\ttfamily def Misc.\+Misc.\+download\+\_\+face\+\_\+recognition\+\_\+haar (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Downloading face recognition haar data as sample data
+:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_misc_1_1_misc_aea6e1bbdef723dfbe94899cd18399b93}\label{class_misc_1_1_misc_aea6e1bbdef723dfbe94899cd18399b93}} 
+\index{Misc\+::\+Misc@{Misc\+::\+Misc}!download\+\_\+neg\+\_\+files@{download\+\_\+neg\+\_\+files}}
+\index{download\+\_\+neg\+\_\+files@{download\+\_\+neg\+\_\+files}!Misc\+::\+Misc@{Misc\+::\+Misc}}
+\subsubsection{\texorpdfstring{download\+\_\+neg\+\_\+files()}{download\_neg\_files()}}
+{\footnotesize\ttfamily def Misc.\+Misc.\+download\+\_\+neg\+\_\+files (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Downloading negative sample files
+:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_misc_1_1_misc_a911cb2d9726dcdbf6ef25607522cedc0}\label{class_misc_1_1_misc_a911cb2d9726dcdbf6ef25607522cedc0}} 
+\index{Misc\+::\+Misc@{Misc\+::\+Misc}!download\+\_\+pos\+\_\+files@{download\+\_\+pos\+\_\+files}}
+\index{download\+\_\+pos\+\_\+files@{download\+\_\+pos\+\_\+files}!Misc\+::\+Misc@{Misc\+::\+Misc}}
+\subsubsection{\texorpdfstring{download\+\_\+pos\+\_\+files()}{download\_pos\_files()}}
+{\footnotesize\ttfamily def Misc.\+Misc.\+download\+\_\+pos\+\_\+files (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{images = {\ttfamily True},  }\item[{}]{haar = {\ttfamily False} }\end{DoxyParamCaption})}
 
 \begin{DoxyVerb}Downloads and extracts the datasets selected
 :param images:
@@ -67,11 +106,19 @@ def \mbox{\hyperlink{class_misc_1_1_misc_a8d30d14e25c28f7f8ac3798e501d4aaa}{fold
 :param path:
 :return:
 \end{DoxyVerb}
- \mbox{\Hypertarget{class_misc_1_1_misc_aaeb87b754b9e7b39fcf5c39e6b34a1ae}\label{class_misc_1_1_misc_aaeb87b754b9e7b39fcf5c39e6b34a1ae}} 
+ \mbox{\Hypertarget{class_misc_1_1_misc_a850d818bacc25df0ecc2ae05b9b15f89}\label{class_misc_1_1_misc_a850d818bacc25df0ecc2ae05b9b15f89}} 
+\index{Misc\+::\+Misc@{Misc\+::\+Misc}!generate\+\_\+description@{generate\+\_\+description}}
+\index{generate\+\_\+description@{generate\+\_\+description}!Misc\+::\+Misc@{Misc\+::\+Misc}}
+\subsubsection{\texorpdfstring{generate\+\_\+description()}{generate\_description()}}
+{\footnotesize\ttfamily def Misc.\+Misc.\+generate\+\_\+description (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_misc_1_1_misc_aebc81e32ad0507ccbccd8173d9a0ff50}\label{class_misc_1_1_misc_aebc81e32ad0507ccbccd8173d9a0ff50}} 
 \index{Misc\+::\+Misc@{Misc\+::\+Misc}!manipulate\+\_\+image@{manipulate\+\_\+image}}
 \index{manipulate\+\_\+image@{manipulate\+\_\+image}!Misc\+::\+Misc@{Misc\+::\+Misc}}
 \subsubsection{\texorpdfstring{manipulate\+\_\+image()}{manipulate\_image()}}
-{\footnotesize\ttfamily def Misc.\+Misc.\+manipulate\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily def Misc.\+Misc.\+manipulate\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{positive = {\ttfamily False} }\end{DoxyParamCaption})}
 
 \begin{DoxyVerb}Modifies images to gray scale and resize it
 :return:
