--- a/doc/latex/class_recognition_1_1_recognition.tex
+++ b/doc/latex/class_recognition_1_1_recognition.tex
@@ -3,22 +3,72 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41baefbd7bf38}\label{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41baefbd7bf38}} 
-def {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self)
+def \mbox{\hyperlink{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41baefbd7bf38}{\+\_\+\+\_\+init\+\_\+\+\_\+}} (self)
 \item 
-\mbox{\Hypertarget{class_recognition_1_1_recognition_af1a6506383bb5321b7eb186a7617dfe7}\label{class_recognition_1_1_recognition_af1a6506383bb5321b7eb186a7617dfe7}} 
-def {\bfseries detect} (self)
+def \mbox{\hyperlink{class_recognition_1_1_recognition_a8c3d9ab0e9c708246660b8a6300eb852}{face\+\_\+recognition}} (self)
+\item 
+def \mbox{\hyperlink{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}{get\+\_\+camera\+\_\+image}} (self, cascade, message, mirror=True)
+\end{DoxyCompactItemize}
+\subsection*{Static Public Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+def \mbox{\hyperlink{class_recognition_1_1_recognition_a5b3081b9a48c136f1397cd17dce89c37}{write\+\_\+text\+\_\+on\+\_\+image}} (img, message, bottom\+\_\+left\+\_\+corner\+\_\+of\+\_\+text=(10, 500))
 \end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
-\item 
-\mbox{\Hypertarget{class_recognition_1_1_recognition_a7c450f93080f7f5bbcf4c69aabf20489}\label{class_recognition_1_1_recognition_a7c450f93080f7f5bbcf4c69aabf20489}} 
-{\bfseries logger}
 \item 
 \mbox{\Hypertarget{class_recognition_1_1_recognition_a6b6d17e10f916f8a158eaef600005bbc}\label{class_recognition_1_1_recognition_a6b6d17e10f916f8a158eaef600005bbc}} 
 {\bfseries misc}
 \end{DoxyCompactItemize}
 
+
+\subsection{Detailed Description}
+\begin{DoxyVerb}This class handles the
+\end{DoxyVerb}
+ 
+
+\subsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41baefbd7bf38}\label{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41baefbd7bf38}} 
+\index{Recognition\+::\+Recognition@{Recognition\+::\+Recognition}!\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}}
+\index{\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}!Recognition\+::\+Recognition@{Recognition\+::\+Recognition}}
+\subsubsection{\texorpdfstring{\+\_\+\+\_\+init\+\_\+\+\_\+()}{\_\_init\_\_()}}
+{\footnotesize\ttfamily def Recognition.\+Recognition.\+\_\+\+\_\+init\+\_\+\+\_\+ (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Initialising
+\end{DoxyVerb}
+ 
+
+\subsection{Member Function Documentation}
+\mbox{\Hypertarget{class_recognition_1_1_recognition_a8c3d9ab0e9c708246660b8a6300eb852}\label{class_recognition_1_1_recognition_a8c3d9ab0e9c708246660b8a6300eb852}} 
+\index{Recognition\+::\+Recognition@{Recognition\+::\+Recognition}!face\+\_\+recognition@{face\+\_\+recognition}}
+\index{face\+\_\+recognition@{face\+\_\+recognition}!Recognition\+::\+Recognition@{Recognition\+::\+Recognition}}
+\subsubsection{\texorpdfstring{face\+\_\+recognition()}{face\_recognition()}}
+{\footnotesize\ttfamily def Recognition.\+Recognition.\+face\+\_\+recognition (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Sample cascade to detect faces
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}\label{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}} 
+\index{Recognition\+::\+Recognition@{Recognition\+::\+Recognition}!get\+\_\+camera\+\_\+image@{get\+\_\+camera\+\_\+image}}
+\index{get\+\_\+camera\+\_\+image@{get\+\_\+camera\+\_\+image}!Recognition\+::\+Recognition@{Recognition\+::\+Recognition}}
+\subsubsection{\texorpdfstring{get\+\_\+camera\+\_\+image()}{get\_camera\_image()}}
+{\footnotesize\ttfamily def Recognition.\+Recognition.\+get\+\_\+camera\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{cascade,  }\item[{}]{message,  }\item[{}]{mirror = {\ttfamily True} }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Shows live images with marked detections
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_recognition_1_1_recognition_a5b3081b9a48c136f1397cd17dce89c37}\label{class_recognition_1_1_recognition_a5b3081b9a48c136f1397cd17dce89c37}} 
+\index{Recognition\+::\+Recognition@{Recognition\+::\+Recognition}!write\+\_\+text\+\_\+on\+\_\+image@{write\+\_\+text\+\_\+on\+\_\+image}}
+\index{write\+\_\+text\+\_\+on\+\_\+image@{write\+\_\+text\+\_\+on\+\_\+image}!Recognition\+::\+Recognition@{Recognition\+::\+Recognition}}
+\subsubsection{\texorpdfstring{write\+\_\+text\+\_\+on\+\_\+image()}{write\_text\_on\_image()}}
+{\footnotesize\ttfamily def Recognition.\+Recognition.\+write\+\_\+text\+\_\+on\+\_\+image (\begin{DoxyParamCaption}\item[{}]{img,  }\item[{}]{message,  }\item[{}]{bottom\+\_\+left\+\_\+corner\+\_\+of\+\_\+text = {\ttfamily (10,~500)} }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
+
+\begin{DoxyVerb}Writes text above the recognized field
+
+:param img:
+:param message:
+:param bottom_left_corner_of_text:
+:return:
+\end{DoxyVerb}
+ 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
