--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -138,6 +138,8 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Main page}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{Namespace Index}
 \input{namespaces}
 \chapter{Class Index}
