--- a/doc/latex/class_recognition_1_1_recognition.tex
+++ b/doc/latex/class_recognition_1_1_recognition.tex
@@ -7,7 +7,7 @@ def \mbox{\hyperlink{class_recognition_1_1_recognition_a2f7707bf1fc057ae30c41bae
 \item 
 def \mbox{\hyperlink{class_recognition_1_1_recognition_a8c3d9ab0e9c708246660b8a6300eb852}{face\+\_\+recognition}} (self)
 \item 
-def \mbox{\hyperlink{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}{get\+\_\+camera\+\_\+image}} (self, cascade, message, mirror=True)
+def \mbox{\hyperlink{class_recognition_1_1_recognition_afc5b62b531c4e2c6c5fef2c9a9e1b0c8}{get\+\_\+camera\+\_\+image}} (self, mirror=True)
 \end{DoxyCompactItemize}
 \subsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
@@ -47,11 +47,11 @@ def \mbox{\hyperlink{class_recognition_1_1_recognition_a5b3081b9a48c136f1397cd17
 
 \begin{DoxyVerb}Sample cascade to detect faces
 \end{DoxyVerb}
- \mbox{\Hypertarget{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}\label{class_recognition_1_1_recognition_a8d0901488f10a3806c8ebbdff92043b3}} 
+ \mbox{\Hypertarget{class_recognition_1_1_recognition_afc5b62b531c4e2c6c5fef2c9a9e1b0c8}\label{class_recognition_1_1_recognition_afc5b62b531c4e2c6c5fef2c9a9e1b0c8}} 
 \index{Recognition\+::\+Recognition@{Recognition\+::\+Recognition}!get\+\_\+camera\+\_\+image@{get\+\_\+camera\+\_\+image}}
 \index{get\+\_\+camera\+\_\+image@{get\+\_\+camera\+\_\+image}!Recognition\+::\+Recognition@{Recognition\+::\+Recognition}}
 \subsubsection{\texorpdfstring{get\+\_\+camera\+\_\+image()}{get\_camera\_image()}}
-{\footnotesize\ttfamily def Recognition.\+Recognition.\+get\+\_\+camera\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{cascade,  }\item[{}]{message,  }\item[{}]{mirror = {\ttfamily True} }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily def Recognition.\+Recognition.\+get\+\_\+camera\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{mirror = {\ttfamily True} }\end{DoxyParamCaption})}
 
 \begin{DoxyVerb}Shows live images with marked detections
 \end{DoxyVerb}
