--- a/doc/latex/class_training_1_1_training.tex
+++ b/doc/latex/class_training_1_1_training.tex
@@ -5,27 +5,37 @@
 \item 
 def \mbox{\hyperlink{class_training_1_1_training_aa5c3c606edf57118d04ce14e3bc5704d}{\+\_\+\+\_\+init\+\_\+\+\_\+}} (self)
 \item 
+def \mbox{\hyperlink{class_training_1_1_training_a097c544cd41a26efad6a1f43d9d3e79b}{download\+\_\+pos\+\_\+files}} (self, images=True, haar=False)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_a3b928a92d958223bfede214302c5df8b}{download\+\_\+neg\+\_\+files}} (self)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_af1e7984b798afa13b1a9624c9406ebf1}{download\+\_\+face\+\_\+recognition\+\_\+haar}} (self)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_a231b923ada43f82a67e09fc474b79ccf}{manipulate\+\_\+image}} (self)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_a28507bbd67dcd1161275a3d2b407b09a}{generate\+\_\+description\+\_\+gtsrb}} (self)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_a0efdb3216814d0cd34510d98eeae0440}{generate\+\_\+description\+\_\+traffic}} (self)
+\item 
+def \mbox{\hyperlink{class_training_1_1_training_a81056ed2095ad847bda80bf05a92ed7f}{generate\+\_\+description\+\_\+airplanes}} (self)
+\item 
 def \mbox{\hyperlink{class_training_1_1_training_a910d50cee577997808b934c6ef0d5a31}{load\+\_\+training\+\_\+image\+\_\+properties}} (self)
 \item 
 def \mbox{\hyperlink{class_training_1_1_training_aa886794bd150b7a8894db32437893757}{load\+\_\+test\+\_\+image\+\_\+properties}} (self)
 \item 
 def \mbox{\hyperlink{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d60}{load\+\_\+images}} (self, training)
-\item 
-def \mbox{\hyperlink{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}{train\+\_\+system}} (self)
-\item 
-def \mbox{\hyperlink{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}{show}} (self, image, x1=0, y1=0, x2=0, y2=0)
 \end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
+\item 
+\mbox{\Hypertarget{class_training_1_1_training_ae69d9ae3cd16d5ec81d4386205fcd558}\label{class_training_1_1_training_ae69d9ae3cd16d5ec81d4386205fcd558}} 
+{\bfseries misc}
 \item 
 \mbox{\Hypertarget{class_training_1_1_training_a2b03b592f1b0db8a9990845bbeb47962}\label{class_training_1_1_training_a2b03b592f1b0db8a9990845bbeb47962}} 
 {\bfseries training\+\_\+path}
 \item 
 \mbox{\Hypertarget{class_training_1_1_training_a2b44dd14eec8536c54727936be9325b8}\label{class_training_1_1_training_a2b44dd14eec8536c54727936be9325b8}} 
 {\bfseries test\+\_\+path}
-\item 
-\mbox{\Hypertarget{class_training_1_1_training_ae69d9ae3cd16d5ec81d4386205fcd558}\label{class_training_1_1_training_ae69d9ae3cd16d5ec81d4386205fcd558}} 
-{\bfseries misc}
 \end{DoxyCompactItemize}
 
 
@@ -46,7 +56,61 @@ def \mbox{\hyperlink{class_training_1_1_training_a8cec544073598dd1b50d5961aaab50
  
 
 \subsection{Member Function Documentation}
-\mbox{\Hypertarget{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d60}\label{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d60}} 
+\mbox{\Hypertarget{class_training_1_1_training_af1e7984b798afa13b1a9624c9406ebf1}\label{class_training_1_1_training_af1e7984b798afa13b1a9624c9406ebf1}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!download\+\_\+face\+\_\+recognition\+\_\+haar@{download\+\_\+face\+\_\+recognition\+\_\+haar}}
+\index{download\+\_\+face\+\_\+recognition\+\_\+haar@{download\+\_\+face\+\_\+recognition\+\_\+haar}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{download\+\_\+face\+\_\+recognition\+\_\+haar()}{download\_face\_recognition\_haar()}}
+{\footnotesize\ttfamily def Training.\+Training.\+download\+\_\+face\+\_\+recognition\+\_\+haar (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Downloading face recognition haar data as sample data
+:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a3b928a92d958223bfede214302c5df8b}\label{class_training_1_1_training_a3b928a92d958223bfede214302c5df8b}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!download\+\_\+neg\+\_\+files@{download\+\_\+neg\+\_\+files}}
+\index{download\+\_\+neg\+\_\+files@{download\+\_\+neg\+\_\+files}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{download\+\_\+neg\+\_\+files()}{download\_neg\_files()}}
+{\footnotesize\ttfamily def Training.\+Training.\+download\+\_\+neg\+\_\+files (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Downloading negative sample files
+
+Source: http://www.robots.ox.ac.uk/~vgg/data/bicos/
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a097c544cd41a26efad6a1f43d9d3e79b}\label{class_training_1_1_training_a097c544cd41a26efad6a1f43d9d3e79b}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!download\+\_\+pos\+\_\+files@{download\+\_\+pos\+\_\+files}}
+\index{download\+\_\+pos\+\_\+files@{download\+\_\+pos\+\_\+files}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{download\+\_\+pos\+\_\+files()}{download\_pos\_files()}}
+{\footnotesize\ttfamily def Training.\+Training.\+download\+\_\+pos\+\_\+files (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{images = {\ttfamily True},  }\item[{}]{haar = {\ttfamily False} }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}Downloads and extracts the datasets selected
+:param images:
+:param haar:
+:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a81056ed2095ad847bda80bf05a92ed7f}\label{class_training_1_1_training_a81056ed2095ad847bda80bf05a92ed7f}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!generate\+\_\+description\+\_\+airplanes@{generate\+\_\+description\+\_\+airplanes}}
+\index{generate\+\_\+description\+\_\+airplanes@{generate\+\_\+description\+\_\+airplanes}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{generate\+\_\+description\+\_\+airplanes()}{generate\_description\_airplanes()}}
+{\footnotesize\ttfamily def Training.\+Training.\+generate\+\_\+description\+\_\+airplanes (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a28507bbd67dcd1161275a3d2b407b09a}\label{class_training_1_1_training_a28507bbd67dcd1161275a3d2b407b09a}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!generate\+\_\+description\+\_\+gtsrb@{generate\+\_\+description\+\_\+gtsrb}}
+\index{generate\+\_\+description\+\_\+gtsrb@{generate\+\_\+description\+\_\+gtsrb}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{generate\+\_\+description\+\_\+gtsrb()}{generate\_description\_gtsrb()}}
+{\footnotesize\ttfamily def Training.\+Training.\+generate\+\_\+description\+\_\+gtsrb (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a0efdb3216814d0cd34510d98eeae0440}\label{class_training_1_1_training_a0efdb3216814d0cd34510d98eeae0440}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!generate\+\_\+description\+\_\+traffic@{generate\+\_\+description\+\_\+traffic}}
+\index{generate\+\_\+description\+\_\+traffic@{generate\+\_\+description\+\_\+traffic}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{generate\+\_\+description\+\_\+traffic()}{generate\_description\_traffic()}}
+{\footnotesize\ttfamily def Training.\+Training.\+generate\+\_\+description\+\_\+traffic (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
+
+\begin{DoxyVerb}:return:
+\end{DoxyVerb}
+ \mbox{\Hypertarget{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d60}\label{class_training_1_1_training_a6df4e220dd5cbd4769a84852fc4e9d60}} 
 \index{Training\+::\+Training@{Training\+::\+Training}!load\+\_\+images@{load\+\_\+images}}
 \index{load\+\_\+images@{load\+\_\+images}!Training\+::\+Training@{Training\+::\+Training}}
 \subsubsection{\texorpdfstring{load\+\_\+images()}{load\_images()}}
@@ -74,26 +138,13 @@ def \mbox{\hyperlink{class_training_1_1_training_a8cec544073598dd1b50d5961aaab50
 \begin{DoxyVerb}Loads training images properties
 :return:
 \end{DoxyVerb}
- \mbox{\Hypertarget{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}\label{class_training_1_1_training_a8cec544073598dd1b50d5961aaab5045}} 
-\index{Training\+::\+Training@{Training\+::\+Training}!show@{show}}
-\index{show@{show}!Training\+::\+Training@{Training\+::\+Training}}
-\subsubsection{\texorpdfstring{show()}{show()}}
-{\footnotesize\ttfamily def Training.\+Training.\+show (\begin{DoxyParamCaption}\item[{}]{self,  }\item[{}]{image,  }\item[{}]{x1 = {\ttfamily 0},  }\item[{}]{y1 = {\ttfamily 0},  }\item[{}]{x2 = {\ttfamily 0},  }\item[{}]{y2 = {\ttfamily 0} }\end{DoxyParamCaption})}
+ \mbox{\Hypertarget{class_training_1_1_training_a231b923ada43f82a67e09fc474b79ccf}\label{class_training_1_1_training_a231b923ada43f82a67e09fc474b79ccf}} 
+\index{Training\+::\+Training@{Training\+::\+Training}!manipulate\+\_\+image@{manipulate\+\_\+image}}
+\index{manipulate\+\_\+image@{manipulate\+\_\+image}!Training\+::\+Training@{Training\+::\+Training}}
+\subsubsection{\texorpdfstring{manipulate\+\_\+image()}{manipulate\_image()}}
+{\footnotesize\ttfamily def Training.\+Training.\+manipulate\+\_\+image (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
 
-\begin{DoxyVerb}:param image:
-:param x1:
-:param y1:
-:param x2:
-:param y2:
-:return:
-\end{DoxyVerb}
- \mbox{\Hypertarget{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}\label{class_training_1_1_training_ae08acd1661b3b8d7b7b12a9648abe876}} 
-\index{Training\+::\+Training@{Training\+::\+Training}!train\+\_\+system@{train\+\_\+system}}
-\index{train\+\_\+system@{train\+\_\+system}!Training\+::\+Training@{Training\+::\+Training}}
-\subsubsection{\texorpdfstring{train\+\_\+system()}{train\_system()}}
-{\footnotesize\ttfamily def Training.\+Training.\+train\+\_\+system (\begin{DoxyParamCaption}\item[{}]{self }\end{DoxyParamCaption})}
-
-\begin{DoxyVerb}Trains the ai
+\begin{DoxyVerb}Modifies images to gray scale and resize it
 :return:
 \end{DoxyVerb}
  
