--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -1,5 +1,5 @@
 \hypertarget{index_intro_sec}{}\section{Introduction}\label{index_intro_sec}
-This is the introduction.\hypertarget{index_references}{}\section{References}\label{index_references}
+Dieses Projekt befasst sich damit, Verkehrschilder zu erkennen und basierend auf dem erkannten Verkehrsschild, Aktionen an ein Roboter via R\+OS zu senden.\hypertarget{index_references}{}\section{References}\label{index_references}
 \hypertarget{index_cascade_creation}{}\subsection{Cascade creation}\label{index_cascade_creation}
 
 \begin{DoxyItemize}
