--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -140,6 +140,10 @@
 %--- Begin generated contents ---
 \chapter{Main page}
 \label{index}\hypertarget{index}{}\input{index}
+\chapter{Haar Cascades}
+\label{haar_cascades}
+\Hypertarget{haar_cascades}
+\input{haar_cascades}
 \chapter{Namespace Index}
 \input{namespaces}
 \chapter{Class Index}
