--- a/src/HaarCascades.dox
+++ b/src/HaarCascades.dox
@@ -2,6 +2,7 @@
  * \section dataset Haar Cascaden
  *
  * \subsection create_dataset Datensatz erstellen
+ * Positiven Datensatz erstellen
  * Für die Erstellung des Datensatzes zu Verkehrszeichenerkennung wurden Videoaufnahmen von den Verkehrszeichen aus
  * mehreren Perspektiven gemacht. Danach wurde das Video mit ffmpeg in einzelne Bilder gespeichert.
  *
@@ -9,21 +10,30 @@
  * ffmpeg -i videodatei bildname -hidebanner
  * \endcode
  *
+ * Beispiel
+ * \code{.sh}
+ * ffmpeg -i video.mp4 img%04d.jpg -hidebanner
+ * \endcode
+
  * Dabei ist zu beachten, dann beim Bildname %04d im Dateinamen mit angegeben wird, sodass die Bild vierstellig
  * nummeriert werden. Die Anzahl an Ziffern kann, wenn nötig, angepasst werden z.B. %06d.
+ *
+ * Negative Daten herunterladen
+ * Für die Erstellung von Haarcascaden werden neben den positiven Bildern, welche mit der Kamera erstellt wurden auch negative Bilder benötigt. Dabei kann das Skript manipulate.py nützlich sein.
+ * Es läd Bilder einer Kategorie bei Image-net.org herunter. Pro Kategorie können dies 1000 Bilder sein. Zusätzlich werden die heruntergelandenen Bilder verkleinert und ind Graustufen dargestellt.
+ * Die Anzahl an negativen Bildern für die Bilderkennung sollte >2000 sein. Dabei darf auf den Bildern das zu erkennende Objekt nicht vorhanden sein.
  *
  * \subsection create_cascades Cascaden erstellen
  * Der erstellte Datensatz muss nun in einer Liste mit Beschreibung zusammengefasst werden. Dabei wird der Pfad,
  * die Anzahl an Eigenschaften, sowie die Region of Interest (ROI) angegeben.
  *
- * Info.dat erstellen
+ * Nachdem die Datensätze mit positiven und negativen Bildern vorhanden ist, werden zwei Listen erstellt. Zum einen die Info.dat, welche die positiven Bilder auflistet und zum anderen
+ * die negativen Bilder als Hintergrund in der Datei bg.txt. Dabei wird die Funktion create_pos_n_neg() verwendet.
+ *
+ * Info.dat
  * \code{.sh}
  * /Dateipfad/Datei.jpg AnzahlEigenschaften ROI.x1 ROI.y1 ROI.x2 ROI.y2
  * \endcode
- *
- * Zur Erstellung von Haar Cascaden werden zusätzlich auch Bilder benötigt, welche die Strukturen, die erkannt
- * werden sollen nicht enthalten. Dazu wird ein weiterer Datensatz angelegt mit negativ Bildern. Diese werden dann in
- * einer Datei bg.txt aufgelistet.
  *
  * Bg.txt erstellen
  * \code{.sh}
